TestSuite/errors/err0220.pas
begin
  yield 1;
end.